# vision-export-studio

./: .gitignore  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  index.html  main.py  package.json  pyproject.toml  requirements.txt  vite.config.ts
.github/workflows/: auto-tag.yml  ci.yml  release.yml  update-homebrew-cask.yml  update-homebrew-tap.yml
scripts/: package-linux-homebrew-tarball.sh
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri-config.test.ts  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/python/: rfdetr_export_helper.py  test-on-gpu.sh  test-on-gpu.test.ts  test_rfdetr_export_helper.py
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: app.rs  deps.rs  environment.rs  export.rs  gpu.rs  mod.rs  provider_registry.rs  rfdetr.rs  setup.rs
src-tauri/src/commands/providers/: mod.rs  rfdetr.rs  ultralytics.rs
src/components/: app-icon.tsx  format-icons.tsx  update-checker.tsx
src/features/: landing-screen.tsx
src/features/environment/: environment-status.tsx
src/features/export/: command-preview.test.ts  command-preview.ts  dependency-panel.test.ts  dependency-panel.tsx  drop-zone.tsx  export-actions.test.ts  export-log.test.ts  export-log.tsx  export-modal.tsx  (+5 more)
src/lib/: analytics.test.ts  analytics.ts  platform.test.ts  platform.ts  providers.test.ts  routes.ts  types.ts
tests/: test_ultralytics_preflight.py  test_worker.py
yolo_export_studio/: __init__.py
yolo_export_studio/core/: formats.py  history.py  jobs.py  logs.py  preflight.py  providers.py  routes.py
yolo_export_studio/providers/: __init__.py  fake.py  ultralytics.py
yolo_export_studio/ui/: dependency_panel.py  drop_zone.py  format_card.py  format_grid.py  log_viewer.py  main_window.py  options_panel.py  process_controller.py  queue_panel.py  theme.py
yolo_export_studio/workers/: export_worker.py
(+37 files in other folders)
