[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "yolo-export-studio"
version = "0.1.0"
description = "Model export metadata and legacy worker helpers for the Tauri desktop app"
requires-python = ">=3.11"
dependencies = ["packaging>=23.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["yolo_export_studio*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
