[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "yolo-export-studio"
version = "0.1.0"
description = "Desktop ML model export studio"
requires-python = ">=3.11"
dependencies = ["PySide6>=6.7", "packaging>=23.0"]

[project.scripts]
yolo-export-studio = "yolo_export_studio.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["yolo-export-studio*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
