[package]
name = "yolo-export-studio"
version = "0.1.0"
description = "Desktop ML model export studio"
authors = ["Aman Harsh"]
license = "MIT"
repository = "https://github.com/amanharshx/yolo-export-studio"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "yolo_export_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0" }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
uuid = { version = "1", features = ["v4", "fast-rng"] }
